<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="info.androidhive.materialdesign.activity.MessagesFragment">

    <!-- Header aligned to top -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <RelativeLayout
        android:id="@+id/header"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <TextView
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Alevel"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <!-- Footer aligned to bottom -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/footer"
            android:textSize="20sp" />



    </RelativeLayout>
    <ScrollView
        android:id="@+id/oscrollableContents"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:padding="17sp" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="47dp">

            <CheckBox
                android:id="@+id/chkIos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/math"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/chkAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/physics"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/biology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biology"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/geography"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geography"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/chemistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chemistry"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/economics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/economics"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/fineart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fineart"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/foodandnutrition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodandnutrition"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/cre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cre"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/computer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/literature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/literature"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/submath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submath"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/agriculture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agriculture"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/kiswahili"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kiswahili"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/tdrawing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tdrawing"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/french"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/metalwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metalwork"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/luganda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luganda"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/latin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latin"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:theme="@style/MyCheckBox"/>

            <CheckBox
                android:id="@+id/germany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/germany"
                android:theme="@style/MyCheckBox"/>

        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/abc_ic_go_search_api_mtrl_alpha"/>

</RelativeLayout>